# blookeOS

./: README.md
blookeOS/: Cargo.toml  launch_vm.sh  x86_64-blooke_os.json
blookeOS/.cargo/: config.toml
blookeOS/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
blookeOS/tests/: basic_boot.rs  stack_overflow.rs
