[package]
name = "blooke_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

######## Disable stack unwinding on panic ###########
[profile.dev]
# panic = "abort"
[profile.release]
# panic = "abort"


[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]} # Configures and links our kernel with a pre-existing bootloader
volatile = "0.2.6" # Used for volatile buffer writes
spin = "0.5.2" # Spinlock
x86_64 = "0.14.2" # Tons of helpful stuff for the x86 architecture
uart_16550 = "0.2.0" # Use this to read/write from the QEMU serial interface
pic8259 = "0.10.1" # Programmable Interrupt Controllers
pc-keyboard = "0.7.0" # Utilities for interpreting keyboard scancodes

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial","stdio","-display","none"
    ]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "stack_overflow"
harness = false